src/objects/Commisions__c/Commisions__c.object-meta.xml
<CustomObject>
    <label>Commisions</label>
    <nameField>
        <displayFormat>Commision-{000000}</displayFormat>
        <label>Commisions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commisions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>