src/objects/Commisions__c/fields/Commisions_Change__c.field-meta.xml
<CustomField>
    <fullName>Commisions_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commisions Change</label>
    <type>Checkbox</type>
</CustomField>