src/objects/Commisions__c/fields/Header_Id__c.field-meta.xml
<CustomField>
    <fullName>Header_Id__c</fullName>
    <label>Header Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>