src/objects/Commisions__c/fields/legacy_line_id__c.field-meta.xml
<CustomField>
    <fullName>legacy_line_id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Line Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>