src/objects/Commisions__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>Order_Line__c</referenceTo>
    <relationshipLabel>Commisions</relationshipLabel>
    <relationshipName>Commisions</relationshipName>
    <type>Lookup</type>
</CustomField>