src/objects/Commisions__c/fields/Percent10__c.field-meta.xml
<CustomField>
    <fullName>Percent10__c</fullName>
    <label>Percent10</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>