src/objects/Commisions__c/fields/Percent1__c.field-meta.xml
<CustomField>
    <fullName>Percent1__c</fullName>
    <label>Percent1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>