src/objects/Commisions__c/fields/Salesrep_Name10__c.field-meta.xml
<CustomField>
    <fullName>Salesrep_Name10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesrep Firm  Name10</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commisions (Salesrep Name10)</relationshipLabel>
    <relationshipName>Commisions9</relationshipName>
    <type>Lookup</type>
</CustomField>