src/objects/Commisions__c/fields/Salesrep_Name1__c.field-meta.xml
<CustomField>
    <fullName>Salesrep_Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesrep Firm Name1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commisions</relationshipLabel>
    <relationshipName>Commisions</relationshipName>
    <type>Lookup</type>
</CustomField>