src/objects/Commisions__c/fields/Salesrep_Name2__c.field-meta.xml
<CustomField>
    <fullName>Salesrep_Name2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesrep Firm Name2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commisions (Salesrep Name2)</relationshipLabel>
    <relationshipName>Commisions1</relationshipName>
    <type>Lookup</type>
</CustomField>